# yolov3

./: .gitignore  README.md  config.py  dataset.py  loss.py  main.py  model.py  notebook.ipynb  pyproject.toml  trainer.py  utils.py  utils_display.py
tests/: yolo_voc_dataset_test.py  yolov3_model_test.py
wandb/: latest-run
wandb/run-20220819_085726-3fwu0jq5/: run-3fwu0jq5.wandb
wandb/run-20220819_085726-3fwu0jq5/files/: config.yaml  wandb-metadata.json
wandb/run-20220819_085912-33u3z8ts/: run-33u3z8ts.wandb
wandb/run-20220819_085912-33u3z8ts/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220819_090321-tcptatlp/: run-tcptatlp.wandb
wandb/run-20220819_090321-tcptatlp/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20220819_091728-aaw8d4h8/: run-aaw8d4h8.wandb
wandb/run-20220819_091728-aaw8d4h8/files/: config.yaml  wandb-metadata.json
wandb/run-20220819_091834-3gu4zg35/files/: config.yaml  wandb-metadata.json
wandb/run-20220819_092048-1xop8jzf/: run-1xop8jzf.wandb
wandb/run-20220819_092048-1xop8jzf/files/: config.yaml  wandb-metadata.json
wandb/run-20220819_092622-1cxz3sb1/files/: config.yaml  wandb-metadata.json
wandb/run-20220819_092805-2gqcm8xl/files/: config.yaml  wandb-metadata.json
