[tool.poetry]
name = "yolov3"
version = "0.1.0"
description = ""
authors = ["joaoflf <fernandesj@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
torch = "2.0"
albumentations-experimental = "^0.0.1"
numpy = "^1.23.1"
pandas = "^1.4.3"
tqdm = "^4.64.0"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
nms = "^0.1.6"
jupyter = "^1.0.0"
notebook = "^6.4.12"
black = "^22.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
tk = "^0.1.0"
wandb = "^0.13.1"
torchmetrics = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
